# ariadne

./: .gitignore  LICENSE  README.md  example.py  main.py  pyproject.toml  references.md  run_experiment_example.py  run_experiment_rag.py  run_experiment_summarization.py
ariadne_ai/evaluators/: rag_answer_relevance_evaluator.py  rag_context_relevance_evaluator.py  rag_evaluator.py  rag_faithfulness_evaluator.py  summarization_hallucination_evaluator.py  summarization_informativeness_evaluator.py
ariadne_ai/llms/: answer_relevance_evaluator.py  base_llm_evaluator.py  context_relevance_evaluator.py  faithfullness_evaluator.py  open_ai_completion.py  question_answerer.py  question_generator.py
ariadne_ai/loaders/: loader.py  rag_generation_loader.py  rag_loader.py  summarization_loader.py
ariadne_ai/metrics/: answer_relevance_failure.py  context_relevance_failure.py  contradiction_score.py  faithfullness.py  faithfullness_failure.py  noninformativeness_score.py
ariadne_ai/publishers/: publisher_log.py
data/: log_results.json
data/logs/: log_rag_ans_rel_eval.json  log_rag_cont_rel_eval.json  log_rag_faith_eval.json  log_sum_hal_eval.json  log_sum_hal_eval_gpt_35_questions_2.json  log_sum_hal_eval_gpt_35_questions_5.json  logs_xsum_sample.json  perf_rag_ans_rel_eval.txt  perf_rag_cont_rel_eval.txt  perf_rag_faith_eval.txt  perf_sum_hal_eval_gpt_35_questions_2.txt  perf_sum_hal_eval_gpt_35_questions_5.txt  perf_xsum_sample.json  xsum_sample.json
examples/: detect_rag_hallucinations.ipynb  detect_text_summarization_hallucinations.ipynb
test/: test_loader.py
(+42 files in other folders)
