[tool.poetry]
name = "ariadne-ai"
version = "0.1.12"
description = ""
authors = ["Shiv <shiv@athina.ai>", "Akshat <akshat@athina.ai>", "Christos <chziakas@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
openai = "^0.28.0"
pandas = "^2.1.0"
python-dotenv = "^1.0.0"
datasets = "^2.14.5"
scikit-learn = "^1.3.0"
athina-logger = "^0.0.11"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
